# VibeMusic

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT_GUIDE.md  Makefile  README-Environment.md  README.md  docker-build.sh  docker-compose.development.yml  docker-compose.production.yml  docker-compose.yml  llms.txt
backend/: .env.dev  .env.example  .env.prod  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.prod.txt  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: .gitkeep  004_performance_indexes.py  401d420d168c_initial_database_schema_with_all_models.py  add_performance_indexes.py
backend/scripts/: dev.py
backend/src/: __init__.py  config.py  main.py
backend/src/api/: analysis.py  generation.py  music.py  router.py  sessions.py  websocket.py
backend/src/cache/: __init__.py  optimized_cache_strategies.py  redis_client.py
backend/src/database/: connection.py
backend/src/middleware/: __init__.py  auth.py  error_handler.py  security.py
backend/src/models/: __init__.py  base.py  emotion.py  emotion_profile.py  generated_music.py  music_prompt.py  typing_pattern.py  user_session.py
backend/src/services/: __init__.py  database_optimizer.py  emotion_analyzer.py  file_storage_service.py  music_ai_service.py  music_generation_service.py  music_generator.py  optimized_pattern_processor.py  optimized_websocket_manager.py  pattern_analysis_service.py  realtime_processor.py  realtime_processor_simple.py  session_service.py  websocket_service.py
backend/src/utils/: __init__.py  logging.py
backend/tests/contract/: test_analyze_post.py  test_download_get.py  test_generate_post.py  test_music_get.py  test_sessions_get.py  test_sessions_post.py  test_websocket_connect.py  test_websocket_typing.py
backend/tests/integration/: test_calm_music.py  test_complex_music.py  (+2 more)
(+152 files in other folders)
